# MyLibrariesCPP

./: CMakeLists.txt  LICENSE
Projekt/: CMakeLists.txt  Projekt.cpp  Projekt.h
Projekt/Libraries/: Arrays.h  Values.h
Projekt/Libraries/Print/: Print.cpp  Print.h
Projekt/Libraries/String/: String.cpp  String.h
Projekt/Libraries/Values/: Values.cpp  Values.h
